Fixed a CSS bug in mobile styles.
git-svn-id: https://plugins.svn.wordpress.org/featured-galleries/trunk@866929 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin.css
+++ b/css/admin.css
@@ -31,9 +31,13 @@
 }
 
 /* Special CSS to the Select and Remove Buttons */
+@media screen and (min-width: 783px) {
+	#featuredgallerydiv button {
+		height: 32px !important;
+		padding-top:1px !important;
+	}
+}
 #featuredgallerydiv button {
-	height: 32px !important;
-	padding-top:1px !important;
 	margin-top:5px !important;
 }
 #featuredgallerydiv button#fg_removeall {
