Bugfix for older versions of WP.
git-svn-id: https://plugins.svn.wordpress.org/featured-galleries/trunk@896996 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin.css
+++ b/css/admin.css
@@ -30,6 +30,10 @@
 	border:none;
 }
 
+#featuredgallerydiv .media-modal-icon {
+	background-position: -95px 5px;
+}
+
 /* Special CSS to the Select and Remove Buttons */
 
 @media screen and (min-width: 783px) {
