Bugfixes and WP compatibility version bump. See changelog for details.
git-svn-id: https://plugins.svn.wordpress.org/featured-galleries/trunk@1053613 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin.css
+++ b/css/admin.css
@@ -28,6 +28,7 @@
 .no-sidebar .media-frame-menu .media-menu {
 	background-color:transparent;
 	border:none;
+	padding: 15px 0px;
 }
 
 #featuredgallerydiv .media-modal-icon {
